--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <meta charset="utf-8">
 <head>
 	<title>Network</title>
+  <style>
+    line {
+      stroke: #ccc;
+      stroke-width: 0.5;
+    }
+    circle {
+      fill: #C29D4E;
+    }
+  </style>
 </head>
 
 <body>
