--- a/6/index.html
+++ b/6/index.html
@@ -32,6 +32,6 @@
   <svg width="1000" height="600"></svg>
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  <script src="js/6.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
