--- a/1/index.html
+++ b/1/index.html
@@ -8,6 +8,6 @@
   <svg width="1200" height="800"></svg>
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  <script src="js/1.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
