--- a/5/index.html
+++ b/5/index.html
@@ -24,6 +24,6 @@
   <svg width="1200" height="800"></svg>
 
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  <script src="js/5.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
